crates/ruff_python_parser/src/snapshots/ruff_python_parser__context__tests__aug_assign_name.snap
---
source: crates/ruff_python_parser/src/context.rs
expression: parse_ast
---
[
    AugAssign(
        StmtAugAssign {
            range: 0..6,
            target: Name(
                ExprName {
                    range: 0..1,
                    id: "x",
                    ctx: Store,
                },
            ),
            op: Add,
            value: Constant(
                ExprConstant {
                    range: 5..6,
                    value: Int(
                        1,
                    ),
                    kind: None,
                },
            ),
        },
    ),
]
