crates/ruff_python_parser/src/snapshots/ruff_python_parser__context__tests__del_attribute.snap
---
source: ruff_python_parser/src/context.rs
expression: parse_ast
---
[
    Delete(
        StmtDelete {
            range: 0..7,
            targets: [
                Attribute(
                    ExprAttribute {
                        range: 4..7,
                        value: Name(
                            ExprName {
                                range: 4..5,
                                id: "x",
                                ctx: Load,
                            },
                        ),
                        attr: Identifier {
                            id: "y",
                            range: 6..7,
                        },
                        ctx: Del,
                    },
                ),
            ],
        },
    ),
]
